--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>ECharts Java Docs</title>
@@ -8,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
 </head>
+
 <body>
   <div id="app"></div>
   <script>
@@ -15,13 +17,17 @@
       name: 'ECharts Java',
       repo: 'https://github.com/IcePear-Jzx/ECharts-Java.git',
       subMaxLevel: 2,
+      sidebarDisplayLevel: 1,
       coverpage: 'coverpage.md',
-      homepage: 'en-us/install.md',
-      loadSidebar: 'en-us/sidebar.md',
-      loadNavbar: 'en-us/navbar.md'
+      homepage: 'en-us/quick-start.md',
+      loadSidebar: 'sidebar.md',
+      loadNavbar: 'navbar.md',
     }
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-java.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
 </body>
+
 </html>
