--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
       repo: 'https://github.com/IcePear-Jzx/ECharts-Java.git',
       subMaxLevel: 2,
       sidebarDisplayLevel: 1,
-      coverpage: 'coverpage.md',
-      homepage: 'en-us/quick-start.md',
-      loadSidebar: 'sidebar.md',
-      loadNavbar: 'navbar.md',
+      coverpage: true,
+      loadSidebar: true,
+      loadNavbar: true,
+      alias: {
+        '/.*/sidebar.md': '/sidebar.md'
+      }
     }
   </script>
   <!-- Docsify v4 -->
