finish pie funnel candlestick

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       coverpage: true,
       loadSidebar: true,
       loadNavbar: true,
+      homepage: 'quick-start.md',
       alias: {
         '/.*/sidebar.md': '/sidebar.md'
       }
