add component APIs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     window.$docsify = {
       name: 'ECharts Java',
       repo: 'https://github.com/ECharts-Java/ECharts-Java.git',
+      auto2top: true,
       subMaxLevel: 2,
       sidebarDisplayLevel: 1,
       coverpage: true,
