add more config to add "word count" and "easy-copy" features

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       homepage: 'quick-start.md',
       alias: {
         '/.*/sidebar.md': '/sidebar.md'
+      },
+      count: {
+        coutable:true,
+        fontsize:'0.9em',
+        color:'rgb(90,90,90)',
+        language:'english'
       }
     }
   </script>
@@ -32,6 +38,10 @@
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-java.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
+  <!-- easy copy code blocks -->
+  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
+  <!-- word count stat -->
+  <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
 </body>
 
 </html>
