add chinese version overall structure

--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
       auto2top: true,
       subMaxLevel: 2,
       sidebarDisplayLevel: 1,
-      coverpage: true,
+      coverpage: ['/', '/zh-cn/'],
       loadSidebar: true,
       loadNavbar: true,
-      homepage: 'quick-start.md',
-      alias: {
-        '/.*/sidebar.md': '/sidebar.md'
-      },
+      // homepage: 'quick-start.md',
       count: {
         coutable:true,
         fontsize:'0.9em',
