--- a/_media/pie/basic-pie.html
+++ b/_media/pie/basic-pie.html
@@ -20,7 +20,7 @@
     </div>
     <script type="text/javascript">
         let chart = echarts.init(document.getElementById("display-container"));
-        let option = {"title":{"text":"Basic Pie"},"tooltip":{"trigger":"item"},"legend":{"show":true},"series":[{"type":"pie","data":[{"name":"Search Engine","value":1048},{"name":"Direct","value":735},{"name":"Email","value":580},{"name":"Union Ads","value":484},{"name":"Video Ads","value":300}]}]}
+        let option = {"title":{"text":"Basic Pie"},"tooltip":{"trigger":"item"},"legend":{},"series":[{"type":"pie","data":[{"name":"Search Engine","value":1048},{"name":"Direct","value":735},{"name":"Email","value":580},{"name":"Union Ads","value":484},{"name":"Video Ads","value":300}]}]}
         chart.setOption(option);
     </script>
 </body>
