--- a/_media/pie/basic-rose.html
+++ b/_media/pie/basic-rose.html
@@ -20,7 +20,7 @@
     </div>
     <script type="text/javascript">
         let chart = echarts.init(document.getElementById("display-container"));
-        let option = {"legend":{"show":true},"series":[{"type":"pie","data":[{"name":"rose 1","value":40},{"name":"rose 2","value":38},{"name":"rose 3","value":32},{"name":"rose 4","value":30},{"name":"rose 5","value":28},{"name":"rose 6","value":26},{"name":"rose 7","value":22},{"name":"rose 8","value":18}],"itemStyle":{"borderRadius":8},"radius":[20,150],"roseType":"area"}]}
+        let option = {"legend":{},"series":[{"type":"pie","data":[{"name":"rose 1","value":40},{"name":"rose 2","value":38},{"name":"rose 3","value":32},{"name":"rose 4","value":30},{"name":"rose 5","value":28},{"name":"rose 6","value":26},{"name":"rose 7","value":22},{"name":"rose 8","value":18}],"itemStyle":{"borderRadius":8},"radius":[20,150],"roseType":"area"}]}
         chart.setOption(option);
     </script>
 </body>
