--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
       coverpage: ['/', '/zh-cn/'],
       loadSidebar: true,
       loadNavbar: true,
-      // homepage: 'quick-start.md',
+      homepage: 'quick-start.md',
       count: {
         coutable:true,
         fontsize:'0.9em',
         color:'rgb(90,90,90)',
         language:'english'
-      }
+      },
+      relativePath: true,
     }
   </script>
   <!-- Docsify v4 -->
