--- a/index.html
+++ b/index.html
@@ -20,16 +20,23 @@
       auto2top: true,
       subMaxLevel: 3,
       sidebarDisplayLevel: 1,
+      onlyCover: true,
       coverpage: ['/', '/zh-cn/'],
       loadSidebar: true,
       loadNavbar: true,
       homepage: 'quick-start.md',
       count: {
-        coutable:true,
-        fontsize:'0.9em',
-        color:'rgb(90,90,90)',
-        language:'english'
+        coutable: true,
+        fontsize: '0.9em',
+        color: 'rgb(90,90,90)',
+        language: 'english'
       },
+      alias: {
+        '/chart-apis/_sidebar.md': '/_sidebar.md',
+        '/component-apis/_sidebar.md': '/_sidebar.md',
+        '/chart-apis/_navbar.md': '/_navbar.md',
+        '/component-apis/_navbar.md': '/_navbar.md'
+      }
     }
   </script>
   <!-- Docsify v4 -->
