--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         '/chart-apis/_sidebar.md': '/_sidebar.md',
         '/component-apis/_sidebar.md': '/_sidebar.md',
         '/chart-apis/_navbar.md': '/_navbar.md',
-        '/component-apis/_navbar.md': '/_navbar.md'
+        '/component-apis/_navbar.md': '/_navbar.md',
+        '/zh-cn/.*/_sidebar.md': '/zh-cn/_sidebar.md',
+        '/zh-cn/.*/_navbar.md': '/zh-cn/_navbar.md',
       }
     }
   </script>
