finish line-series

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
       homepage: 'quick-start.md',
       alias: {
         '/chart-apis/_sidebar.md': '/_sidebar.md',
-        '/component-apis/_sidebar.md': '/_sidebar.md',
         '/chart-apis/_navbar.md': '/_navbar.md',
+        '/component-apis/_sidebar.md': '/_sidebar.md',
         '/component-apis/_navbar.md': '/_navbar.md',
+        '/series-apis/_sidebar.md': '/_sidebar.md',
+        '/series-apis/_navbar.md': '/_navbar.md',
         '/zh-cn/.*/_sidebar.md': '/zh-cn/_sidebar.md',
-        '/zh-cn/.*/_navbar.md': '/zh-cn/_navbar.md',
+        '/zh-cn/.*/_navbar.md': '/zh-cn/_navbar.md'
       }
     }
   </script>
