--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       coverpage: ['/', '/zh-cn/'],
       loadSidebar: true,
       loadNavbar: true,
-      homepage: 'quick-start.md',
+      homepage: 'overview.md',
       alias: {
         '/chart-apis/_sidebar.md': '/_sidebar.md',
         '/chart-apis/_navbar.md': '/_navbar.md',
